--- a/spotify/templates/spotify/index.html
+++ b/spotify/templates/spotify/index.html
@@ -21,6 +21,7 @@
                 <table class="table table-striped table-sm table-bordered">
                     <tr>
                         <th>Playlist Name</th>
+                        <th>Owner</th>
                         <th>Tracks</th>
                         <th>Open</th>
                         <th>URI</th>                        
@@ -28,6 +29,7 @@
                     {% for p in my_playlists %}
                     <tr>
                         <td>{{p.name}}</td>
+                        <td>{{p.owner.display_name}}</td>
                         <td>{{p.tracks.total}}</td>
                         <td><a href="{{p.external_urls.spotify}}">Open</a></td>
                         <td>{{p.uri}}</td>
