--- a/spotify/templates/spotify/partials/playlist.html
+++ b/spotify/templates/spotify/partials/playlist.html
@@ -1,10 +1,14 @@
 <h4>Selected Playlist</h4>
 <h5>{{playlist.name}}</h5>
-<input type="hidden" id="playlist-uri" value="{{playlist.uri}}">
+<form action="" method="post">
+    {% csrf_token %}
+    <input type="hidden" id="playlist-uri" value="{{playlist.uri}}">
+    <label for="group">Add playlist to group: </label>
+    <select id="group" name="group_id" class="form-control">
+        {% for g in available_groups %}
+        <option value="{{g.id}}">{{g.name}}</option>
+        {% endfor %}
+    </select>
+</form>
 
-<label for="group">Add playlist to group: </label>
-<select id="group" name="group_id" class="form-control">
-    {% for g in available_groups %}
-    <option value="{{g.id}}">{{g.name}}</option>
-    {% endfor %}
-</select>
+
