--- a/spotify/templates/spotify/index.html
+++ b/spotify/templates/spotify/index.html
@@ -51,7 +51,9 @@
                         </div>
                     </div>
                     <div class="col col-sm-6">
-                        <div id="playlist"></div>
+                        <div id="playlist">
+                            
+                        </div>
                         <div id="player" class="mt-4">                            
                             <h4 >Player</h4>
                             <script src="https://sdk.scdn.co/spotify-player.js"></script>
