--- a/spotify/templates/spotify/partials/playlist.html
+++ b/spotify/templates/spotify/partials/playlist.html
@@ -1,14 +1,23 @@
 <h4>Selected Playlist</h4>
 <h5>{{playlist.name}}</h5>
-<form action="" method="post">
+<form id=action="" method="post">
     {% csrf_token %}
     <input type="hidden" id="playlist-uri" value="{{playlist.uri}}">
-    <label for="group">Add playlist to group: </label>
-    <select id="group" name="group_id" class="form-control">
-        {% for g in available_groups %}
-        <option value="{{g.id}}">{{g.name}}</option>
-        {% endfor %}
-    </select>
+    <div class="form-group">
+        <label for="group">Add playlist to group: </label>
+        <select id="group" name="group_id" class="form-control">
+            {% for g in available_groups %}
+            <option value="{{g.id}}">{{g.name}}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="new-group">Add to new group:</label>
+        <input type="text" name="new-group" class="form-control">
+    </div>
+    <div class="text-right">
+        <button type="submit" class="btn btn-primary">Update</button>
+    </div>
 </form>
 
 
