--- a/login/static/style.css
+++ b/login/static/style.css
@@ -28,8 +28,7 @@ form {
     border-radius:10px;
 }
 
-form.inline {
-    display:inline-block;
+form.minimal {
     padding:0;
     margin:0;
     border-radius:0;
