--- a/spotify/templates/spotify/partials/playlist.html
+++ b/spotify/templates/spotify/partials/playlist.html
@@ -6,21 +6,23 @@
 <p class="mb-1">Member of groups:</p>
 <ul>
     {% for group in playlist_groups %}
-    <li>{{group.name}}</li>
+    <li>{{group.name}} <a href="{% url 'spotification:degroup' group_id=group.id internal_playlist_id=internal_playlist_id %}">remove</a></li>
     {% endfor %}
 {% endif %}
 </ul>
-<input type="hidden" id="playlist-uri" name="playlist-id" value="{{playlist.uri}}">
+<input type="hidden" id="playlist-uri" name="playlist-uri" value="{{playlist.uri}}">
 <input type="hidden" id="playlist-id" name="playlist-id" value="{{playlist.id}}">
-<div class="form-group">
+
+<div class="form-group">       
     <label for="group">Add playlist to group: </label>
     <select id="group" name="group-id" class="form-control">
         <option value="0">[ select a group to add ]</option>
         {% for g in available_groups %}
         <option value="{{g.id}}">{{g.name}}</option>
         {% endfor %}
-    </select>
+    </select> 
 </div>
+
 <div class="form-group">
     <label for="new-group">Add to new group:</label>
     <input type="text" name="new-group" class="form-control">
