--- a/spotify/templates/spotify/index.html
+++ b/spotify/templates/spotify/index.html
@@ -20,34 +20,57 @@
             <div class="container-inner">
                 <div class= "row">
                     <div class="col col-sm-6  mb-4">
-                        <h4>My Playlists</h4>
-                        <p><b>Count: {{my_playlists|length}}</b></p>
-                        <div class="table-responsive">
-                            <table class="table table-striped table-sm table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                    <th>Playlist Name</th>
-                                    <!-- <th>Owner</th> -->
-                                    <th>Tracks</th>
-                                    <th>Open</th>
-                                    <th>URI</th>
-                                    <!-- <th>URI</th>                         -->
-                                </tr>
-                                </thead>
-                                <tbody>
-                                    {% for p in my_playlists %}
-                                    <tr>                                        
-                                        <td>{{p.name}}</td>
-                                        <!-- <td>{{p.owner.display_name}}</td> -->
-                                        <td>{{p.tracks.total}}</td>
-                                        <td><a href="{{p.external_urls.spotify}}">Open</a></td>
-                                        <!-- <td>{{p.uri}}</td> -->
-                                        <td>{{p.uri}}</td>
+                        <div id="groups">
+                            <h4>My Playlist Groups</h4>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-sm table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Group</th>
+                                            <th>Playlists</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for g in groups %}
+                                        <tr>
+                                            <td>{{g.name}}</td>
+                                            <td>{{g.playlists.all.count}}</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div id="playlists">
+                            <h4>My Playlists</h4>
+                            <p><b>Count: {{my_playlists|length}}</b></p>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-sm table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                        <th>Playlist Name</th>
+                                        <!-- <th>Owner</th> -->
+                                        <th>Tracks</th>
+                                        <th>Open</th>
+                                        <th>URI</th>
+                                        <!-- <th>URI</th>                         -->
                                     </tr>
-                                    <input type="hidden" name="playlist-id" value="{{p.id}}">
-                                    {% endfor %}
-                                </tbody>                          
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                        {% for p in my_playlists %}
+                                        <tr>                                        
+                                            <td>{{p.name}}</td>
+                                            <!-- <td>{{p.owner.display_name}}</td> -->
+                                            <td>{{p.tracks.total}}</td>
+                                            <td><a href="{{p.external_urls.spotify}}">Open</a></td>
+                                            <!-- <td>{{p.uri}}</td> -->
+                                            <td>{{p.uri}}</td>
+                                        </tr>
+                                        <input type="hidden" name="playlist-id" value="{{p.id}}">
+                                        {% endfor %}
+                                    </tbody>                          
+                                </table>
+                            </div>
                         </div>
                     </div>
                     <div class="col col-sm-6">
