saving progress. groups page is coming along. no more ajax calls except for player related functions.

--- a/login/templates/navbar.html
+++ b/login/templates/navbar.html
@@ -5,6 +5,9 @@
     <div class="col col-sm-6 text-right">
         {% if request.session.user_id %}
         <a class="nav-link" href="{% url 'spotification:home' %}">Home</a>
+        <a class="nav-link" href="{% url 'spotification:playlists-start' %}">Playlists</a>
+        <a class="nav-link" href="{% url 'spotification:groups-start' %}">Groups</a>
+        <a class="nav-link" href="{% url 'spotification:player' %}">Player</a>
         <a class="nav-link" href="{% url 'login:profile' %}">Profile</a>
         <a class="nav-link" href="{% url 'login:logout' %}">Log Out</a>
         {% else %}
