--- a/spotify/templates/spotify/groups.html
+++ b/spotify/templates/spotify/groups.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="col col-sm-6">
-                        <form id="playlist-form" action="{% url 'spotification:update-playlist' %}"  method="post" class="minimal">
+                        <form id="playlist-form" action="{% url 'spotification:update-group' %}"  method="post" class="minimal">
                             {% if not selected_group %}
                             <h4>Selected Group: None</h4>
                             {% else %}
@@ -66,11 +66,14 @@
                             <div class="form-group">       
                                 <label for="playlist">Add playlist to group: </label>
                                 <select id="playlist" name="spotify-id" class="form-control">
-                                    <option value="0">[ select a playlist to add ]</option>
+                                    <option value="">[ select a playlist to add ]</option>
                                     {% for p in all_playlists %}
-                                    <option value="{{p.spotify_id}}">{{p.name}}</option>
+                                    <option value="{{p.id}}">{{p.name}}</option>
                                     {% endfor %}
                                 </select> 
+                                <div class="text-right mt-3">
+                                    <button type="submit" class="btn btn-secondary">Add</button>
+                                </div>
                             </div>
                             
                             <!-- <div class="form-group">
