--- a/login/static/style.css
+++ b/login/static/style.css
@@ -2,6 +2,14 @@ body {
     background-color: rgb(82, 82, 82);
 }
 
+a {
+    color:#28a745
+}
+
+a:hover {
+    color:#28a745
+}
+
 .navbar {
     background-color:black;
     color:white;
@@ -9,7 +17,12 @@ body {
 
 .nav-link {
     display: inline-block;
-    font-size:1.2rem;
+    font-size:1.1rem;
+    color: #34DE5B
+}
+
+.nav-link:hover {
+    color: #3CFF69;
 }
 
 .app-name {
@@ -17,9 +30,23 @@ body {
     font-size:1.5rem;
 }
 
-.container {
-    background-color: #b1b1b1;
-    padding:25px;
+#logo {
+    height:30px;
+    width:auto;
+    margin:0 10px 10px 5px;
+    vertical-align: middle;
+}
+
+.container-fluid {
+    background-color: rgb(82, 82, 82);
+    /* background-color: #b1b1b1; */
+    padding:20px 0;
+}
+
+.container-inner {
+    background-color:white;
+    padding:20px;
+    /* border-radius:10px; */
 }
 
 form {
@@ -45,13 +72,6 @@ label {
     margin-top:30px;
 }
 
-.container-inner {
-    background-color:white;
-    padding:20px;
-    border-radius:10px;
-}
-
-
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -68,9 +88,8 @@ label {
 
   /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: white;
     margin: 15% auto; /* 15% from the top and centered */
-    /* padding: 20px; */
     border: 1px solid #888;    
     max-width:400px;
     border-radius:8px;
@@ -79,17 +98,17 @@ label {
 #modal-title {
     width:100%;
     border-bottom: 1px solid #888;
-    background-color: palegoldenrod;
-    color:black;
+    background-color: #28a745;
+    color: white;
     border-radius:8px 8px 0 0;
     font-size: 18px;
-    font-weight:bold;
+    /* font-weight:bold; */
     padding-bottom:10px;
 }
 
 /* The Close Button */
 #close {
-    color: black;
+    color: white;
     font-size: 28px;
     font-weight: bold;
     display:inline;
@@ -98,20 +117,28 @@ label {
 
 #close:hover,
 #close:focus {
-    color: #888; 
+    color: #bcfab4; 
     text-decoration: none;
     cursor: pointer;
 }
 
 #modal-message {
-    padding:10px;
+    padding:15px;
 }
 
 .table-responsive {
     max-height:600px;
 }
 
-.form-control.play-select {
-    /* max-width:300px; */
-}
+@media only screen and (min-width: 970px) {
+    .container-inner {
+        max-width:970px;
+        margin:0 auto;
+        border-radius:10px;
+    }
 
+    .container-fluid {
+        padding-left:20px;
+        padding-right:20px;
+    }
+}
