--- a/login/templates/navbar.html
+++ b/login/templates/navbar.html
@@ -1,8 +1,10 @@
+{% load static %}
 <div class="navbar row">
-    <div class="col col-sm-6">
-        <span class="app-name pr-4">Spotification {% if user_name %} - {{user_name}} {% endif %}</span>
-    </div>
-    <div class="col col-sm-6 text-right">
+    <div class="col col-sm-5 app-name pr-4">        
+        <img id="logo" src="{% static 'spotify_favicon.png' %}" alt="logo">
+        Spotification {% if user_name %} - {{user_name}} {% endif %}
+    </div>      
+    <div class="col col-sm-7 text-right"> 
         {% if request.session.user_id %}
         <a class="nav-link" href="{% url 'spotification:home' %}">Home</a>
         <a class="nav-link" href="{% url 'spotification:playlists-start' %}">Playlists</a>
@@ -11,7 +13,7 @@
         <a class="nav-link" href="{% url 'login:profile' %}">Profile</a>
         <a class="nav-link" href="{% url 'login:logout' %}">Log Out</a>
         {% else %}
-        <a class="nav-link" href="{% url 'login:home' %}">Log In</a>
+        <a class="nav-link " href="{% url 'login:home' %}">Log In</a>
         {% endif %}
     </div>
 </div>
