--- a/spotify/templates/spotify/groups.html
+++ b/spotify/templates/spotify/groups.html
@@ -27,7 +27,7 @@
                                 method="post" class="minimal">
                                 {% csrf_token %}
                                 <div class="form-group form-row mt-3">
-                                    <label for="new-group" class="col-sm-3 col-form-label text-right">New Group</label>
+                                    <label for="new-group" class="col-sm-3 col-form-label text-right hidden-xs">New Group</label>
                                     <div class="col-sm-7 mb-2">
                                         <input id="new-group" name="new-group" class="form-control" 
                                             placeholder="new group name">
