--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -11,8 +11,8 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         {% load static %}
         {% load string_ext %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">   
-      
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'spotify_favicon.png' %}"/>      
         <script src="{% static 'modal.js' %}" defer></script>  
     </head>
     <body>
