--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         {% include 'navbar.html' %}
-        <div class="container">
+        <div class="container-fluid">
             <div class="container-inner">
                 <h2 class="pb-4">My Account</h2>
 
